# f2b-buxjr

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  add_smart_test_bans.sh  add_test_bans.sh  build.rs  test_add_random_bans.rs  test_banned_ips.sh
.claude/: settings.local.json
.github/wokflows/: auto-release.yml
.github/workflows/: auto-release.yml  nightly.yml  release.yml
assets/: README.md
src/: app.rs  lib.rs  main.rs
src/services/: fail2ban_client.rs  file_monitor.rs  mod.rs  system_service.rs
src/utils/: errors.rs  logging.rs  mod.rs  privileges.rs
